fix: ajuste esructura principal y personalización de scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,3 +94,20 @@ body {
     letter-spacing: 0.1em;
     text-transform: uppercase; 
 }
+
+/* Scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--os-border);
+  border-radius: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #444;
+}
